Возобновление работы сайта.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,27 @@
-
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
-  <meta charset="UTF-8" />
-  <title>Сайт временно недоступен</title>
+  <meta charset="UTF-8">
+  <title>Сайт у розробці</title>
   <style>
     body {
-      background: #f7f7f7;
-      color: #333;
-      text-align: center;
+      background-color: #fdfdfd;
       font-family: Arial, sans-serif;
-      padding-top: 100px;
+      text-align: center;
+      padding-top: 120px;
+    }
+    h1 {
+      color: #c00;
+      font-size: 36px;
+    }
+    p {
+      font-size: 20px;
+      color: #444;
     }
   </style>
 </head>
 <body>
-  <h1>🛠 Ведутся технические работы</h1>
-  <p>Сайт временно недоступен. Мы скоро вернёмся!</p>
+  <h1>Сайт тимчасово недоступний</h1>
+  <p>Ми оновлюємо сайт. Заходьте пізніше.</p>
 </body>
 </html>
