--- a/index.html
+++ b/index.html
@@ -1,27 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="uk">
 <head>
   <meta charset="UTF-8">
-  <title>Сайт у розробці</title>
-  <style>
-    body {
-      background-color: #fdfdfd;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding-top: 120px;
-    }
-    h1 {
-      color: #c00;
-      font-size: 36px;
-    }
-    p {
-      font-size: 20px;
-      color: #444;
-    }
-  </style>
+  <meta http-equiv="refresh" content="0; URL=ua/about_us.html" />
+  <title>Redirecting...</title>
 </head>
 <body>
-  <h1>Сайт тимчасово недоступний</h1>
-  <p>Ми оновлюємо сайт. Заходьте пізніше.</p>
+  <p>Якщо ви не перенаправлені автоматично, <a href="ua/about_us.html">натисніть тут</a>.</p>
 </body>
 </html>
